plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
    maven { url "https://raw.githubusercontent.com/WonderlandCentral/wonderland-repository/main" }
}

loom {
    accessWidenerPath = file("src/main/resources/sigma-remake.accesswidener")
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation include("dev.firstdark.discordrpc:discord-rpc:1.0.3")
    modImplementation include('org.slf4j:slf4j-api:2.0.17')
    modImplementation include('org.slf4j:slf4j-simple:2.0.17')
    modImplementation include('javazoom:jlayer:1.0.1')
    modImplementation include('tv.wunderbox:nativefiledialog:1.0.3')
    modImplementation include('com.jfposton.ytdlp:yt-dlp-java:1.0.1')
    modImplementation include('net.sourceforge.jaad:jaad:1.0.2')

    compileOnly("org.projectlombok:lombok:1.18.42")
    annotationProcessor("org.projectlombok:lombok:1.18.42")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
	}
}
